applied font raleway

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -6,6 +6,7 @@
   <title>Admin Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="min-h-screen bg-gray-100 font-sans">
   <div class="container mx-auto p-6">
@@ -39,7 +40,7 @@
     }
 
     function fetchMachines() {
-      fetch("http://localhost:5001/api/machines1/pending1", {
+      fetch("https://machine-yard.vercel.app/api/machines1/pending1", {
         headers: { Authorization: `Bearer ${token}` },
       })
         .then((res) => {
