--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,6 +14,7 @@
         .card-hover:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); }
         .status-dot { width: 10px; height: 10px; border-radius: 50%; display: inline-block; }
     </style>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="bg-gray-50">
     <!-- Navigation -->
