--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
             transition: transform 0.7s ease-in-out;
         }
     </style>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="bg-gray-100">
     <div class="absolute opacity-90 w-full">
@@ -202,7 +203,7 @@
             
             try {
                 const spinner = utils.showLoading('registerForm');
-                const response = await fetch('http://localhost:5001/api/auth/register', {
+                const response = await fetch("https://machine-yard.vercel.app/api/auth/register", {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(data)
