--- a/public/login.html
+++ b/public/login.html
@@ -126,7 +126,7 @@
             
             try {
                 const spinner = utils.showLoading('loginForm');
-                const response = await fetch('http://localhost:5001/api/auth/login', {
+                const response = await fetch('https://machine-yard.vercel.app/api/auth/login', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(data)
