--- a/public/owner-add-machine.html
+++ b/public/owner-add-machine.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Machine</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="min-h-screen bg-gray-100 p-6">
   <h1 class="text-3xl font-bold mb-6">Add Machine</h1>
@@ -73,7 +74,7 @@
 
       try {
         const spinner = utils.showLoading("add-machine-form");
-        const response = await fetch("http://localhost:5001/api/machines", {
+        const response = await fetch("https://machine-yard.vercel.app/api/machines", {
           method: "POST",
           headers: {
             Authorization: `Bearer ${localStorage.getItem("token")}`,
