--- a/public/owner-edit-machine.html
+++ b/public/owner-edit-machine.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edit Machine</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="min-h-screen bg-gray-100 p-6">
   <h1 class="text-3xl font-bold mb-6">Edit Machine</h1>
