--- a/public/policies.html
+++ b/public/policies.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Policies - Machine Yard</title>
+    <link rel="stylesheet" href="/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
     <style>
@@ -18,7 +19,7 @@
         }
     </style>
 </head>
-<body class="bg-[#fcfaf8] min-h-screen">
+<body class="bg-[#fcfaf8] min-h-screen font-family-">
     <!-- Navbar Placeholder -->
     <div id="navbar"></div>
 
