--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -243,7 +243,7 @@ const getStatusStyle = (status) => {
     switch (status.toLowerCase()) {
         case 'confirmed': return 'bg-green-100 text-green-700';
         case 'pending': return 'bg-yellow-100 text-yellow-700';
-        default: return 'bg-gray-100 text-gray-700';
+        default: return 'bg-[#fcfaf8] text-gray-700';
     }
 };
 
