--- a/public/owner-add-machine.html
+++ b/public/owner-add-machine.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body class="min-h-screen bg-gray-100 p-6">
+<body class="min-h-screen bg-[#fcfaf8] p-6">
   <h1 class="text-3xl font-bold mb-6">Add Machine</h1>
   <form id="add-machine-form" enctype="multipart/form-data" class="bg-white p-4 rounded shadow max-w-md">
     <input
@@ -57,6 +57,7 @@
 
   <script src="/js/utils.js"></script>
   <script>
+    // inject
     document.getElementById("add-machine-form").addEventListener("submit", async (e) => {
       e.preventDefault();
 
