--- a/public/policies.html
+++ b/public/policies.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Policies - Machine Yard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
@@ -112,7 +113,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="utils.js"></script>
+    <script src="/js/utils.js"></script>
     <script>
         injectNavbar();
         document.addEventListener('DOMContentLoaded', () => {
