--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -8,7 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body class="min-h-screen bg-gray-100 font-sans">
+<body class="min-h-screen bg-[#fcfaf8] font-sans">
   <div class="container mx-auto p-6">
     <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">Admin Dashboard</h1>
 
