--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
         }
     </style>
 </head>
-<body class="bg-gray-100">
+<body class="bg-[#fcfaf8]">
     <div class="absolute opacity-90 w-full">
         <div class="relative w-full mx-auto overflow-hidden">
             <!-- Carousel Wrapper -->
@@ -68,13 +68,64 @@
                         <p class="error-message text-red-500 text-sm mt-1 hidden"></p>
                     </div>
                     
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-2">Password</label>
-                        <input type="password" name="password" 
-                            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                            required>
-                        <p class="error-message text-red-500 text-sm mt-1 hidden"></p>
-                    </div>
+                    <!-- Password -->
+            <div class="relative">
+                <label class="block text-sm font-medium text-gray-600 mb-1"
+                  >Password</label
+                >
+                <div class="relative">
+                  <input
+                    type="password"
+                    name="password"
+                    id="passwordInput"
+                    class="w-full px-3 py-1.5 border border-gray-200 rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent transition duration-150"
+                    required
+                  />
+                  <button
+                    type="button"
+                    id="togglePassword"
+                    class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 hover:text-gray-600"
+                  >
+                    <!-- Eye icon (visible when password is hidden) -->
+                    <svg
+                      id="eyeIcon"
+                      class="h-5 w-5"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+                      />
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
+                      />
+                    </svg>
+                    <!-- Eye-slash icon (visible when password is shown) -->
+                    <svg
+                      id="eyeSlashIcon"
+                      class="h-5 w-5 hidden"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.542-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.542 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"
+                      />
+                    </svg>
+                  </button>
+                </div>
+                <p class="error-message text-red-500 text-sm mt-1 hidden"></p>
+              </div>
                     
                     <button type="submit" 
                         class="w-full bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition duration-200">
@@ -193,6 +244,24 @@
 
         // Initial setup
         updateCarousel();
+
+        document
+        .getElementById("togglePassword")
+        .addEventListener("click", function (e) {
+          e.preventDefault(); // Prevent any default behavior
+
+          const passwordInput = document.getElementById("passwordInput");
+          const eyeIcon = document.getElementById("eyeIcon");
+          const eyeSlashIcon = document.getElementById("eyeSlashIcon");
+
+          // Toggle password visibility
+          const isPassword = passwordInput.getAttribute("type") === "password";
+          passwordInput.setAttribute("type", isPassword ? "text" : "password");
+
+          // Toggle icons
+          eyeIcon.classList.toggle("hidden");
+          eyeSlashIcon.classList.toggle("hidden");
+        });
     </script>
 </body>
 </html>
