--- a/public/owner-edit-machine.html
+++ b/public/owner-edit-machine.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body class="min-h-screen bg-gray-100 p-6">
+<body class="min-h-screen bg-[#fcfaf8] p-6">
   <h1 class="text-3xl font-bold mb-6">Edit Machine</h1>
   <form id="edit-machine-form" class="bg-white p-4 rounded shadow max-w-md">
     <input
@@ -43,7 +43,10 @@
     </button>
   </form>
 
+  <script src="/js/utils.js"></script>
   <script>
+    injectNavbar();
+
     const urlParams = new URLSearchParams(window.location.search);
     const machineId = urlParams.get("machineId");
 
@@ -76,7 +79,7 @@
           Authorization: `Bearer ${localStorage.getItem("token")}`,
         },
         body: JSON.stringify(data),
-      }).then(() => (window.location.href = "/owner/dashboard"));
+      }).then(() => (window.location.href = "/owner-dashboard.html"));
     });
   </script>
 </body>
