--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -128,7 +128,7 @@
     <!-- Modals (Add similar modals for booking and machine management) -->
     
 <script>
-const API_BASE = 'http://localhost:5001/api';
+const API_BASE = 'https://machine-yard.vercel.app/api';
 let currentUser = null;
 
 // Initialize Dashboard
