--- a/public/owner-dashboard.html
+++ b/public/owner-dashboard.html
@@ -10,8 +10,14 @@
 </head>
 <body class="min-h-screen bg-[#fcfaf8] font-sans">
   <div class="container mx-auto p-6">
-    <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">Owner Dashboard</h1>
-
+    <div class="relative mr-10 gap-10 flex items-center justify-center">
+      <h1 class="text-4xl font-bold text-[#2a431c] mb-8 text-center">Owner Dashboard</h1>
+      <div class="w-16 h-16 rounded-full border-[2px] border-[#2a431c] absolute -top-[10px] right-[220px] hover:scale-105 transition-transform duration-200">
+        <a href="/owner-profile.html">
+          <img id="dashboard-profile-pic" src="https://via.placeholder.com/150" alt="User Profile" class="w-full h-full object-cover rounded-full">
+        </a>
+      </div>
+    </div>
     <!-- Machines Section -->
     <div class="bg-white p-6 rounded-lg shadow-md mb-8">
       <div class="flex justify-between items-center mb-4">
@@ -42,6 +48,28 @@
       setTimeout(() => window.location.href = "/login.html", 2000);
     }
 
+    async function setProfilePic() {
+      try {
+        const response = await fetch("https://machine-yard.vercel.app/api/auth/profile", {
+          headers: { Authorization: `Bearer ${token}` },
+        });
+        if (!response.ok) {
+          const errorData = await response.json();
+          throw new Error(errorData.error || "Failed to fetch profile");
+        }
+        const user = await response.json();
+        const profilePicElement = document.getElementById("dashboard-profile-pic");
+        if (user.profilePic) {
+          profilePicElement.src = user.profilePic;
+        } else {
+          profilePicElement.src = "https://via.placeholder.com/150"; // Fallback image
+        }
+      } catch (err) {
+        console.error("Fetch profile error:", err);
+        utils.showToast(`Error fetching profile: ${err.message}`, "error");
+      }
+    }
+
     function fetchMachines() {
       fetch("https://machine-yard.vercel.app/api/machines1/owner1", {
         headers: { Authorization: `Bearer ${token}` },
@@ -57,7 +85,7 @@
         .then((data) => {
           const machinesDiv = document.getElementById("machines");
           machinesDiv.innerHTML = data.length ? data.map((machine) => `
-            <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-200">
+            <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-200 border-[1px] border-gray-300">
               <h3 class="text-xl font-semibold text-gray-800 mb-2">${machine.name}</h3>
               ${machine.images && machine.images.length > 0 ? `
                 <img src="${machine.images[0]}" alt="${machine.name}" class="w-full h-48 object-cover rounded-md mb-4">
@@ -107,7 +135,7 @@
         .then((data) => {
           const bookingsDiv = document.getElementById("bookings");
           bookingsDiv.innerHTML = data.length ? data.map((booking) => `
-            <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-200">
+            <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-200 border-[1px] border-gray-300">
               <h3 class="text-lg font-semibold text-gray-800 mb-2">${booking.machine.name}</h3>
               ${booking.machine.images && booking.machine.images.length > 0 ? `
                 <img src="${booking.machine.images[0]}" alt="${booking.machine.name}" class="w-full h-32 object-cover rounded-md mb-4">
@@ -143,7 +171,7 @@
     }
 
     function deleteMachine(id) {
-      fetch(`http://localhost:5001/api/machines/${id}`, {
+      fetch(`https://machine-yard.vercel.app/api/machines/${id}`, {
         method: "DELETE",
         headers: { Authorization: `Bearer ${token}` },
       })
@@ -163,7 +191,7 @@
     }
 
     function verifyBooking(id, status) {
-      fetch(`http://localhost:5001/api/bookings/verify/${id}`, {
+      fetch(`https://machine-yard.vercel.app/api/bookings/verify/${id}`, {
         method: "PUT",
         headers: {
           "Content-Type": "application/json",
@@ -189,6 +217,7 @@
     if (token) {
       fetchMachines();
       fetchBookings();
+      setProfilePic();
     }
   </script>
 </body>
