--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Machine Yard - Rental System</title>
+    <title>Machine Yard - Machine Rental System</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css" />
     <link
@@ -84,13 +84,13 @@
     >
       <div class="max-w-md w-full space-y-4 z-50">
         <div>
-          <div class="relative">
+          <div class="relative ml-4">
             <img
               src="./logo.jpeg"
               alt="MY"
               class="w-9 absolute left-16 bottom-1"
             />
-            <h1 class="text-4xl font-extrabold text-center text-white mb-2">
+            <h1 class="text-4xl font-extrabold text-center text-white mb-2 ml-2">
               Machine Yard
             </h1>
           </div>
