--- a/public/login.html
+++ b/public/login.html
@@ -50,8 +50,8 @@
     <div class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
         <div class="max-w-md z-50 w-full space-y-8">
             <div>
-                <div class="relative"><img src="./logo.jpeg" alt="MY" class="w-9 absolute left-16 bottom-1">
-                <h1 class="text-4xl font-extrabold text-center text-white mb-2">Machine Yard</h1></div>
+                <div class="relative ml-4"><img src="./logo.jpeg" alt="MY" class="w-9 absolute left-16 bottom-1">
+                <h1 class="text-4xl font-extrabold text-center text-white mb-2 ml-2">Machine Yard</h1></div>
                 
                 <p class="text-center text-white">Your One-Stop Solution for Machine Rentals</p>
             </div>
