--- a/public/owner-edit-machine.html
+++ b/public/owner-edit-machine.html
@@ -7,8 +7,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body class="min-h-screen bg-[#fcfaf8] p-6">
-  <h1 class="text-3xl font-bold mb-6">Edit Machine</h1>
+<body class="min-h-screen bg-[#fcfaf8]">
+  <div class="justify-self-center pt-5">
+  <h1 class="text-3xl font-bold mb-3 justify-self-center">Edit Machine</h1>
   <form id="edit-machine-form" class="bg-white p-4 rounded shadow max-w-md">
     <input
       id="name"
@@ -41,7 +42,7 @@
     >
       Update Machine
     </button>
-  </form>
+  </form></div>
 
   <script src="/js/utils.js"></script>
   <script>
