--- a/public/owner-add-machine.html
+++ b/public/owner-add-machine.html
@@ -1,104 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add Machine</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body class="min-h-screen bg-[#fcfaf8] p-6">
-  <h1 class="text-3xl font-bold mb-6">Add Machine</h1>
-  <form id="add-machine-form" enctype="multipart/form-data" class="bg-white p-4 rounded shadow max-w-md">
-    <input
-      id="name"
-      type="text"
-      placeholder="Name"
-      class="p-2 border rounded w-full mb-4"
-    />
-    <input
-      id="rentalFeePerHour"
-      type="number"
-      placeholder="Rental Fee Per Hour"
-      class="p-2 border rounded w-full mb-4"
-    />
-    <input
-      id="location"
-      type="text"
-      placeholder="Location"
-      class="p-2 border rounded w-full mb-4"
-    />
-    <input
-      id="regNo"
-      type="text"
-      placeholder="Registration Number"
-      class="p-2 border rounded w-full mb-4"
-    />
-    <select id="type" class="p-2 border rounded w-full mb-4">
-      <option value="">Select Type</option>
-      <option value="agriculture">Agriculture</option>
-      <option value="construction">Construction</option>
-      <option value="commercial">Commercial</option>
-    </select>
-    <input
-      id="images"
-      type="file"
-      multiple
-      accept="image/*"
-      class="mb-4"
-    />
-    <button
-      type="submit"
-      class="bg-blue-500 text-white p-2 rounded w-full"
-    >
-      Add Machine
-    </button>
-  </form>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Add Machine</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
+  <body class="min-h-screen bg-[#fcfaf8]">
+    <div class="mt-6 justify-self-center">
+      <h1 class="text-3xl font-bold justify-self-center mb-2">Add Machine</h1>
+      <form
+        id="add-machine-form"
+        enctype="multipart/form-data"
+        class="bg-white p-4 rounded shadow max-w-md"
+      >
+        <input
+          id="name"
+          type="text"
+          placeholder="Name"
+          class="p-2 border rounded w-full mb-4"
+        />
+        <div class="border mb-4 p-2 w-full rounded-sm">
+          <label for="rentalFeePerHour" class="text-gray-400">
+            Rental Fee Per Hour: ₹ <span id="rentalValue">100</span>
+          </label>
+          <input
+            id="rentalFeePerHour"
+            type="range"
+            min="100"
+            max="10000"
+            step="100"
+            value="100"
+            class="p-2 border rounded w-full"
+            oninput="document.getElementById('rentalValue').textContent = this.value"
+          />
+        </div>
 
-  <script src="/js/utils.js"></script>
-  <script>
-    // inject
-    document.getElementById("add-machine-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
+        <input
+          id="location"
+          type="text"
+          placeholder="Location"
+          class="p-2 border rounded w-full mb-4"
+        />
+        <input
+          id="regNo"
+          type="text"
+          placeholder="Registration Number"
+          class="p-2 border rounded w-full mb-4"
+        />
+        <select id="type" class="p-2 border rounded w-full mb-4">
+          <option value="">Select Type</option>
+          <option value="agriculture">Agriculture</option>
+          <option value="construction">Construction</option>
+          <option value="commercial">Commercial</option>
+        </select>
+        <input id="images" type="file" multiple accept="image/*" class="mb-4" />
+        <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full">
+          Add Machine
+        </button>
+      </form>
+    </div>
+    <script src="/js/utils.js"></script>
+    <script>
+      injectNavbar();
+      document
+        .getElementById("add-machine-form")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault();
 
-      const formData = new FormData();
-      formData.append("name", document.getElementById("name").value);
-      formData.append("rentalFeePerHour", document.getElementById("rentalFeePerHour").value);
-      formData.append("location", document.getElementById("location").value);
-      formData.append("regNo", document.getElementById("regNo").value);
-      formData.append("type", document.getElementById("type").value);
+          const formData = new FormData();
+          formData.append("name", document.getElementById("name").value);
+          formData.append(
+            "rentalFeePerHour",
+            document.getElementById("rentalFeePerHour").value
+          );
+          formData.append(
+            "location",
+            document.getElementById("location").value
+          );
+          formData.append("regNo", document.getElementById("regNo").value);
+          formData.append("type", document.getElementById("type").value);
 
-      const files = document.getElementById("images").files;
-      for (let i = 0; i < files.length; i++) {
-        formData.append("images", files[i]);
-      }
+          const files = document.getElementById("images").files;
+          for (let i = 0; i < files.length; i++) {
+            formData.append("images", files[i]);
+          }
 
-      try {
-        const spinner = utils.showLoading("add-machine-form");
-        const response = await fetch("https://machine-yard.vercel.app/api/machines", {
-          method: "POST",
-          headers: {
-            Authorization: `Bearer ${localStorage.getItem("token")}`,
-          },
-          body: formData,
+          try {
+            const spinner = utils.showLoading("add-machine-form");
+            const response = await fetch(
+              "https://machine-yard.vercel.app/api/machines",
+              {
+                method: "POST",
+                headers: {
+                  Authorization: `Bearer ${localStorage.getItem("token")}`,
+                },
+                body: formData,
+              }
+            );
+
+            utils.hideLoading(spinner);
+
+            if (response.ok) {
+              utils.showToast("Machine added successfully!", "success");
+              setTimeout(() => {
+                window.location.href = "/owner-dashboard.html";
+              }, 1000);
+            } else {
+              const result = await response.json();
+              utils.showToast(result.error || "Failed to add machine", "error");
+            }
+          } catch (error) {
+            utils.hideLoading(spinner);
+            utils.showToast("Error: " + error.message, "error");
+          }
         });
-
-        utils.hideLoading(spinner);
-
-        if (response.ok) {
-          utils.showToast("Machine added successfully!", "success");
-          setTimeout(() => {
-            window.location.href = "/owner-dashboard.html";
-          }, 1000);
-        } else {
-          const result = await response.json();
-          utils.showToast(result.error || "Failed to add machine", "error");
-        }
-      } catch (error) {
-        utils.hideLoading(spinner);
-        utils.showToast("Error: " + error.message, "error");
-      }
-    });
-  </script>
-</body>
+    </script>
+  </body>
 </html>
