--- a/public/owner-dashboard.html
+++ b/public/owner-dashboard.html
@@ -123,7 +123,7 @@
 
     async function getCustomerDetails(ownerId) {
     try {
-        const response = await fetch(`http://localhost:5001/api/owners1/${ownerId}`, {
+        const response = await fetch(`https://machine-yard.vercel.app/api/owners1/${ownerId}`, {
             headers: { Authorization: `Bearer ${token}` },
         });
 
