--- a/public/owner-dashboard.html
+++ b/public/owner-dashboard.html
@@ -13,7 +13,7 @@
   <div class="container mx-auto p-6 mt-3">
     <div class="relative mr-10 gap-12 flex items-center justify-center">
       <h1 class="text-4xl font-bold text-[#2a431c] mb-8 mr-10 text-center">Machine Yard | Owner</h1>
-      <div class="w-16 h-16 rounded-full border-[2px] border-[#2a431c] absolute -top-[10px] right-[220px] hover:scale-105 transition-transform duration-200">
+      <div class="w-16 h-16 rounded-full border-[2px] border-[#2a431c] absolute -top-[10px] right-[340px] hover:scale-105 transition-transform duration-200">
         <a href="/owner-profile.html">
           <img id="dashboard-profile-pic" src="https://via.placeholder.com/150" alt="User Profile" class="w-full h-full object-cover rounded-full">
         </a>
@@ -22,7 +22,10 @@
     <!-- Machines Section -->
     <div class="bg-white p-6 rounded-lg mb-8">
       <div class="flex justify-between items-center mb-4">
-        <h2 class="text-2xl font-semibold text-gray-700 ">My Machines</h2>
+        <h2 class="text-2xl font-bold text-gray-700 ">
+          My Machines
+          <div class="border-t-[3px] border-green-800 mt-[3px] w-28 animate-pulse justify-self-center"></div>
+        </h2>
         <button
           onclick="window.location.href='/owner-add-machine.html'"
           class="bg-[#2a431c] text-white p-3 rounded-md hover:bg-green-800 transition duration-200 flex items-center gap-2"
@@ -35,7 +38,10 @@
 
     <!-- Booking Requests Section -->
     <div class="bg-white p-6 rounded-lg">
-      <h2 class="text-2xl font-semibold text-gray-700 mb-4">Booking Requests</h2>
+      <h2 class="text-2xl font-semibold text-gray-700 mb-4">
+        Booking Requests
+        <div class="border-t-[3px] border-green-800 mt-[3px] w-40 animate-pulse ml-4"></div>
+      </h2>
       <div id="bookings" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
     </div>
   </div>
@@ -91,13 +97,13 @@
               ${machine.images && machine.images.length > 0 ? `
                 <img src="${machine.images[0]}" alt="${machine.name}" class="w-full hover:scale-[1.03] h-48 object-cover rounded-md mb-4 transition ease duration-300">
               ` : '<p class="text-gray-500 italic mb-4">No image available</p>'}
-              <p class="text-gray-600"><i class="fas fa-map-marker-alt mr-2"></i>Location: ${machine.location.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())}</p>
-              <p class="text-gray-600"><i class="fas fa-tools mr-2"></i>Type: ${machine.type.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())}</p>
-              <p class="text-gray-600"><i class="fas fa-rupee-sign mr-2"></i>Rate: ${utils.formatCurrency(machine.rentalFeePerHour)}/hr</p>
-              <p class="text-gray-600"><i class="fas fa-star mr-2 text-yellow-400"></i>Rating: ${utils.getRatingStars(machine.rating)}</p>
-              <p class="text-gray-600"><i class="fas fa-check-circle mr-2"></i>Verified: ${machine.isVerified ? "Yes" : "No"}</p>
-              <p class="text-gray-600"><i class="fas fa-clock mr-2"></i>Available: ${machine.isAvailable ? "Yes" : "No"}</p>
-              <p class="text-gray-600"><i class="fas fa-id-card mr-2"></i>Reg No: ${machine.regNo.toUpperCase()}</p>
+              <p class="text-slate-600"><i class="fas fa-map-marker-alt mr-2"></i>Location: ${machine.location.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())}</p>
+              <p class="text-slate-600"><i class="fas fa-tools mr-2"></i>Type: ${machine.type.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())}</p>
+              <p class="text-slate-600"><i class="fa-solid fa-indian-rupee-sign mr-2"></i></i>Rate: ${utils.formatCurrency(machine.rentalFeePerHour)}/hr</p>
+              <p class="text-slate-600"><i class="fas fa-star mr-2"></i>Rating: ${utils.getRatingStars(machine.rating)}</p>
+              <p class="text-slate-600"><i class="fas fa-check-circle mr-2"></i>Verified: ${machine.isVerified ? "Yes" : "No"}</p>
+              <p class="text-slate-600"><i class="fas fa-clock mr-2"></i>Available: ${machine.isAvailable ? "Yes" : "No"}</p>
+              <p class="text-slate-600"><i class="fas fa-id-card mr-2"></i>Reg No: ${machine.regNo.toUpperCase()}</p>
               <div class="mt-4 flex gap-2">
                 <button
                   onclick="window.location.href='/owner-edit-machine.html?machineId=${machine._id}'"
@@ -177,17 +183,17 @@ async function fetchBookings() {
         bookingsDiv.innerHTML = bookingsWithCustomers.length
             ? bookingsWithCustomers.map((booking) => `
                 <div class="bg-white p-6 rounded-lg hover:shadow-lg transition duration-200 border-[1px] border-gray-200 hover:shadow-lg hover:shadow-[#2a431c]/50 transition ease duration-200">
-                    <h3 class="text-lg font-semibold text-gray-800 mb-2">${booking.machine.name}</h3>
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">${booking.machine.name.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())}</h3>
                     ${booking.machine.images && booking.machine.images.length > 0 ? `
                         <img src="${booking.machine.images[0]}" alt="${booking.machine.name}" class="w-full h-32 object-cover rounded-md mb-4">
                     ` : '<p class="text-gray-500 italic mb-4">No image available</p>'}
-                    <p class="text-gray-600"><i class="fas fa-user mr-2"></i>Customer: ${booking.name}</p>
-                    <p class="text-gray-600"><i class="fas fa-envelope mr-2"></i>Email: ${booking.email}</p>
-                    <p class="text-gray-600"><i class="fas fa-clock mr-2"></i>Hours: ${booking.hours}</p>
-                    <p class="text-gray-600"><i class="fas fa-dollar-sign mr-2"></i>Total Cost: ${utils.formatCurrency(booking.totalCost)}</p>
-                    <p class="text-gray-600"><i class="fas fa-calendar-alt mr-2"></i>Start: ${new Date(booking.startTime).toLocaleString()}</p>
-                    <p class="text-gray-600"><i class="fas fa-calendar-check mr-2"></i>End: ${new Date(booking.endTime).toLocaleString()}</p>
-                    <p class="text-gray-600"><i class="fas fa-info-circle mr-2"></i>Status: ${booking.ownerVerified.toUpperCase()}${booking.isCancelled ? " (Cancelled)" : ""}</p>
+                    <p class="text-gray-600"><i class="fas fa-user mr-2"></i>Customer:<strong> ${booking.name.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())} </strong></p>
+                    <p class="text-slate-600"><i class="fas fa-envelope mr-2"></i>Email: ${booking.email}</p>
+                    <p class="text-slate-600"><i class="fas fa-clock mr-2"></i>Hours: ${booking.hours}</p>
+                    <p class="text-slate-600"><i class="fa-solid fa-indian-rupee-sign mr-2"></i></i>Total Cost: ${utils.formatCurrency(booking.totalCost)}</p>
+                    <p class="text-slate-600"><i class="fas fa-calendar-alt mr-2"></i>Start: ${new Date(booking.startTime).toLocaleString()}</p>
+                    <p class="text-slate-600"><i class="fas fa-calendar-check mr-2"></i>End: ${new Date(booking.endTime).toLocaleString()}</p>
+                    <p class="text-slate-600"><i class="fas fa-info-circle mr-2"></i>Status: ${booking.ownerVerified.toUpperCase()}${booking.isCancelled ? " (Cancelled)" : ""}</p>
                     ${booking.ownerVerified === "pending" ? `
                         <div class="mt-4 flex gap-2">
                             <button onclick="verifyBooking('${booking._id}', 'yes')" class="bg-green-600 text-white p-2 rounded-md hover:bg-green-700 transition duration-200 flex-1 flex items-center justify-center gap-2">
