--- a/public/user-dashboard.html
+++ b/public/user-dashboard.html
@@ -365,119 +365,123 @@
           });
       }
       async function getOwnerName(ownerId) {
-        try {
-          const response = await fetch(
+    try {
+        const response = await fetch(
             `https://machine-yard.vercel.app/api/owners1/${ownerId}`,
             {
-              headers: { Authorization: `Bearer ${token}` },
+                headers: { Authorization: `Bearer ${token}` },
             }
-          );
+        );
 
-          if (!response.ok) {
+        if (!response.ok) {
             const errorData = await response.json();
             throw new Error(errorData.error || "Failed to fetch owner name");
-          }
-
-          const data = await response.json();
-          return data.name || "Unknown Owner"; // ✅ Correctly return owner name
-        } catch (error) {
-          console.error("Error fetching owner name:", error);
-          utils.showToast(`Error: ${error.message}`, "error");
-          return "Unknown Owner";
         }
-      }
 
-      async function fetchBookings() {
-        try {
-          const response = await fetch(
+        const data = await response.json();
+        return data.owner?.name || "Unknown Owner"; // ✅ Correctly extracting owner name
+    } catch (error) {
+        console.error("Error fetching owner name:", error);
+        utils.showToast(`Error: ${error.message}`, "error");
+        return "Unknown Owner";
+    }
+}
+
+async function fetchBookings() {
+    try {
+        const response = await fetch(
             "https://machine-yard.vercel.app/api/bookings/user",
             {
-              headers: { Authorization: `Bearer ${token}` },
+                headers: { Authorization: `Bearer ${token}` },
             }
-          );
+        );
 
-          if (!response.ok) {
+        if (!response.ok) {
             const errorData = await response.json();
             throw new Error(errorData.error || "Failed to fetch bookings");
-          }
+        }
 
-          const bookings = await response.json();
-          console.log(bookings);
+        const bookings = await response.json();
+        console.log(bookings);
 
-          const bookingsDiv = document.getElementById("bookings");
+        const bookingsDiv = document.getElementById("bookings");
 
-          if (bookings.length === 0) {
+        if (bookings.length === 0) {
             bookingsDiv.innerHTML =
-              '<p class="text-center text-gray-500 col-span-full text-lg">You have no bookings yet.</p>';
+                '<p class="text-center text-gray-500 col-span-full text-lg">You have no bookings yet.</p>';
             return;
-          }
+        }
 
-          // 🔄 Fetch owner names in parallel for all bookings
-          const bookingsWithOwners = await Promise.all(
+        // 🔄 Fetch owner names in parallel for all bookings
+        const bookingsWithOwners = await Promise.all(
             bookings.map(async (booking) => {
-              const ownerName = await getOwnerName(booking.machine.owner);
-              return { ...booking, ownerName };
+                if (!booking.machine?.owner) {
+                    return { ...booking, ownerName: "Unknown Owner" };
+                }
+                const ownerName = await getOwnerName(booking.machine.owner);
+                return { ...booking, ownerName };
             })
-          );
+        );
 
-          bookingsDiv.innerHTML = bookingsWithOwners
+        bookingsDiv.innerHTML = bookingsWithOwners
             .map(
-              (booking) => `
+                (booking) => `
                     <div class="bg-white border-2 p-6 rounded-xl shadow-md hover:-translate-y-4 transition-transform duration-300">
                         <h3 class="text-lg font-semibold text-gray-800 mb-3">${
-                          booking.machine.name
+                            booking.machine.name.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())
                         }</h3>
                         ${
-                          booking.machine.images &&
-                          booking.machine.images.length > 0
-                            ? `<img src="${booking.machine.images[0]}" alt="${booking.machine.name}" class="w-full h-32 object-cover rounded-lg mb-4">`
-                            : '<p class="text-gray-500 italic mb-4">No image available</p>'
+                            booking.machine.images &&
+                            booking.machine.images.length > 0
+                                ? `<img src="${booking.machine.images[0]}" alt="${booking.machine.name}" class="w-full h-32 object-cover rounded-lg mb-4">`
+                                : '<p class="text-gray-500 italic mb-4">No image available</p>'
                         }
                         <p class="text-gray-600">
                             <i class="fas fa-user mr-2 text-slate-700"></i>Machine Owner: <strong>${
-                              booking.ownerName
+                                booking.ownerName.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())
                             }</strong>
                         </p>
                         <p class="text-gray-600">
                             <i class="fas fa-clock mr-2 text-slate-700"></i>Hours: ${
-                              booking.hours
+                                booking.hours
                             }
                         </p>
                         <p class="text-gray-600"><i class="fas fa-calendar-alt mr-2"></i>Start: ${new Date(
-                          booking.startTime
+                            booking.startTime
                         ).toLocaleString()}</p>
-                    <p class="text-gray-600"><i class="fas fa-calendar-check mr-2"></i>End: ${new Date(
-                      booking.endTime
-                    ).toLocaleString()}</p>
+                        <p class="text-gray-600"><i class="fas fa-calendar-check mr-2"></i>End: ${new Date(
+                            booking.endTime
+                        ).toLocaleString()}</p>
                         <p class="text-gray-600">
                             <i class="fa-solid fa-indian-rupee-sign mr-2 ml-[2px]"></i>Total Cost: ${utils.formatCurrency(
-                              booking.totalCost
+                                booking.totalCost
                             )}
                         </p>
                         <p class="text-gray-600 mb-3">
-                            <i class="fas fa-info-circle mr-2 text-green-600"></i>Status: ${booking.ownerVerified.toUpperCase()}${
-                booking.isCancelled ? " (Cancelled)" : ""
-              }
+                            <i class="fas fa-info-circle mr-2 text-green-600"></i>Status: ${booking.ownerVerified ? booking.ownerVerified.toUpperCase() : "UNKNOWN"}${
+                                booking.isCancelled ? " (Cancelled)" : ""
+                            }
                         </p>
                         ${
-                          !booking.isCancelled && booking.ownerVerified !== 'no'
-                            ? `<button
-                                    onclick="cancelBooking('${booking._id}')"
-                                    class="mt-4 w-full bg-red-600 text-white p-2 rounded-lg btn-hover flex items-center justify-center gap-2 text-sm font-medium"
-                                >
-                                    <i class="fas fa-times"></i> Cancel Booking
-                                </button>`
-                            : ""
+                            !booking.isCancelled && booking.ownerVerified !== 'no'
+                                ? `<button
+                                        onclick="cancelBooking('${booking._id}')"
+                                        class="mt-4 w-full bg-red-600 text-white p-2 rounded-lg btn-hover flex items-center justify-center gap-2 text-sm font-medium"
+                                    >
+                                        <i class="fas fa-times"></i> Cancel Booking
+                                    </button>`
+                                : ""
                         }
                     </div>
                 `
             )
             .join("");
-        } catch (error) {
-          console.error("Fetch bookings error:", error);
-          utils.showToast(`Error fetching bookings: ${error.message}`, "error");
-        }
-      }
+    } catch (error) {
+        console.error("Fetch bookings error:", error);
+        utils.showToast(`Error fetching bookings: ${error.message}`, "error");
+    }
+}
+
       function cancelBooking(id) {
         fetch(`https://machine-yard.vercel.app/api/bookings/cancel/${id}`, {
           method: "PUT",
