--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -1,156 +1,277 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body class="min-h-screen bg-[#fcfaf8] font-sans">
-  <div class="container mx-auto p-6">
-    <h1 class="text-4xl font-bold text-gray-800 mb-8 text-center">Admin Dashboard</h1>
-
-    <!-- Machines List -->
-    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
-      <h2 class="text-2xl font-semibold text-gray-700 mb-4">Pending Machine Verifications</h2>
-      <div id="machines" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-    </div>
-
-    <!-- Modal for Image Viewing -->
-    <div id="imageModal" class="fixed inset-0 bg-black bg-opacity-75 hidden flex items-center justify-center z-50">
-      <div class="bg-white p-4 rounded-lg max-w-3xl w-full max-h-[80vh] overflow-auto">
-        <div class="flex justify-between items-center mb-4">
-          <h3 id="modalTitle" class="text-xl font-semibold text-gray-800"></h3>
-          <button onclick="closeModal()" class="text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Dashboard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
+  <body class="min-h-screen bg-[#fcfaf8] font-sans">
+    <div class="container mx-auto p-6">
+      <h1
+        class="text-4xl relative font-extrabold text-custom-dark mb-4 text-center mb-[25px]"
+      >
+        <span class="mr-5">Machine Yard | Admin</span>
+        <div
+          class="w-14 h-14 rounded-full border-[2px] border-[#2a431c] absolute -top-[11px] right-[375px] hover:scale-105 transition-transform duration-200"
+        >
+          <a href="/admin-profile.html">
+            <img
+              id="dashboard-profile-pic"
+              src="https://via.placeholder.com/150"
+              alt="User Profile"
+              class="w-full h-full object-cover rounded-full"
+            />
+          </a>
         </div>
-        <div id="modalImages" class="grid grid-cols-1 gap-4"></div>
+      </h1>
+      <!-- Machines List -->
+      <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+        <h2 class="text-2xl font-semibold text-gray-700 mb-6">
+          Pending Machine Verifications
+          <div
+            class="border-t-[3px] border-green-800 mt-[2px] w-[280px] animate-pulse ml-6"
+          ></div>
+        </h2>
+        <div
+          id="machines"
+          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"
+        ></div>
+      </div>
+
+      <!-- Modal for Image Viewing -->
+      <div
+        id="imageModal"
+        class="fixed inset-0 bg-black bg-opacity-75 hidden flex items-center justify-center z-50"
+      >
+        <div
+          class="bg-white p-4 rounded-lg max-w-3xl w-full max-h-[80vh] overflow-auto"
+        >
+          <div class="flex justify-between items-center mb-4">
+            <h3
+              id="modalTitle"
+              class="text-xl font-semibold text-gray-800"
+            ></h3>
+            <button
+              onclick="closeModal()"
+              class="text-gray-500 hover:text-gray-700 text-2xl"
+            >
+              &times;
+            </button>
+          </div>
+          <div id="modalImages" class="grid grid-cols-1 gap-4"></div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script src="/js/utils.js"></script>
-  <script>
-    injectNavbar();
-    const token = localStorage.getItem("token");
-    if (!token) {
-      utils.showToast("Please log in to view the admin dashboard", "error");
-      setTimeout(() => window.location.href = "/login.html", 2000);
-    }
+    <script src="/js/utils.js"></script>
+    <script>
+      injectNavbar();
+      const token = localStorage.getItem("token");
+      if (!token) {
+        utils.showToast("Please log in to view the admin dashboard", "error");
+        setTimeout(() => (window.location.href = "/login.html"), 2000);
+      }
 
-    function fetchMachines() {
-      fetch("https://machine-yard.vercel.app/api/machines1/pending1", {
-        headers: { Authorization: `Bearer ${token}` },
-      })
-        .then((res) => {
-          if (!res.ok) {
-            return res.json().then((err) => {
-              throw new Error(err.error || 'Failed to fetch machines');
-            });
-          }
-          return res.json();
+      function fetchMachines() {
+        fetch("https://machine-yard.vercel.app/api/machines1/pending1", {
+          headers: { Authorization: `Bearer ${token}` },
         })
-        .then((data) => {
-          const machinesDiv = document.getElementById("machines");
-          machinesDiv.innerHTML = data.length ? data.map((machine) => `
+          .then((res) => {
+            if (!res.ok) {
+              return res.json().then((err) => {
+                throw new Error(err.error || "Failed to fetch machines");
+              });
+            }
+            return res.json();
+          })
+          .then((data) => {
+            const machinesDiv = document.getElementById("machines");
+            machinesDiv.innerHTML = data.length
+              ? data
+                  .map(
+                    (machine) => `
             <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-200">
-              <h2 class="text-xl font-semibold text-gray-800 mb-2">${machine.name}</h2>
-              ${machine.images && machine.images.length > 0 ? `
+              <h2 class="text-xl font-semibold text-gray-800 mb-2">${
+                machine.name
+              }</h2>
+              ${
+                machine.images && machine.images.length > 0
+                  ? `
                 <img src="${machine.images[0]}" alt="${machine.name}" class="w-full h-48 object-cover rounded-md mb-4 cursor-pointer" onclick="viewImages('${machine._id}', '${machine.name}')">
-              ` : '<p class="text-gray-500 italic mb-4">No image available</p>'}
-              <p class="text-gray-600"><i class="fas fa-user mr-2"></i>Owner: ${machine.owner.name}</p>
-              <p class="text-gray-600"><i class="fas fa-id-card mr-2"></i>Reg No: ${machine.regNo}</p>
-              <p class="text-gray-600"><i class="fas fa-check-circle mr-2"></i>Verified: ${machine.isVerified ? "Yes" : "No"}</p>
-              ${!machine.isVerified ? `
+              `
+                  : '<p class="text-gray-500 italic mb-4">No image available</p>'
+              }
+              <p class="text-gray-600"><i class="fas fa-user mr-2"></i>Owner: ${
+                machine.owner.name
+              }</p>
+              <p class="text-gray-600"><i class="fas fa-id-card mr-2"></i>Reg No: ${
+                machine.regNo
+              }</p>
+              <p class="text-gray-600"><i class="fas fa-check-circle mr-2"></i>Verified: ${
+                machine.isVerified ? "Yes" : "No"
+              }</p>
+              ${
+                !machine.isVerified
+                  ? `
                 <button
-                  onclick="verifyMachine('${machine._id}')"
-                  class="mt-4 w-full bg-green-600 text-white p-2 rounded-md hover:bg-green-700 transition duration-200 flex items-center justify-center gap-1"
-                >
-                  <i class="fas fa-check"></i> Verify Machine
-                </button>
-                <button
-                  onclick="hide()"
-                  class="mt-4 w-full bg-red-600 text-white p-2 rounded-md hover:bg-red-700 transition duration-200 flex items-center justify-center gap-2"
-                >
-                  <i class="fas fa-check"></i>Reject
-                </button>
-              ` : '<p class="mt-4 text-green-500 font-semibold"><i class="fas fa-check-circle mr-2"></i>Verified</p>'}
+  onclick="verifyMachine('${machine._id}')"
+  class="mt-4 w-full bg-green-600 text-white p-2 rounded-md hover:bg-green-700 transition duration-200 flex items-center justify-center gap-1"
+>
+  <i class="fas fa-check"></i> Verify Machine
+</button>
+<button
+  onclick="rejectMachine('${machine._id}')"
+  class="mt-2 w-full bg-red-600 text-white p-2 rounded-md hover:bg-red-700 transition duration-200 flex items-center justify-center gap-2"
+>
+  <i class="fas fa-times"></i> Reject
+</button>
+
+              `
+                  : '<p class="mt-4 text-green-500 font-semibold"><i class="fas fa-check-circle mr-2"></i>Verified</p>'
+              }
             </div>
-          `).join("") : '<p class="text-center text-gray-500 col-span-full">No pending machines to verify.</p>';
-        })
-        .catch((err) => {
-          console.error('Fetch machines error:', err);
-          utils.showToast(`Error fetching machines: ${err.message}`, 'error');
-        });
-    }
+          `
+                  )
+                  .join("")
+              : '<p class="text-center text-gray-500 col-span-full">No pending machines to verify.</p>';
+          })
+          .catch((err) => {
+            console.error("Fetch machines error:", err);
+            utils.showToast(`Error fetching machines: ${err.message}`, "error");
+          });
+      }
 
-    function verifyMachine(id) {
-      fetch(`https://machine-yard.vercel.app/api/machines1/verify1/${id}`, {
-        method: "PUT",
-        headers: {
-          "Content-Type": "application/json",
-          Authorization: `Bearer ${token}`,
-        },
-        body: JSON.stringify({}) // Empty body since no data is needed
-      })
-        .then((res) => {
-          if (!res.ok) {
-            return res.json().then((err) => {
-              throw new Error(err.error || 'Failed to verify machine');
-            });
-          }
-          utils.showToast('Machine verified successfully', 'success');
-          fetchMachines();
+      function verifyMachine(id) {
+        fetch(`https://machine-yard.vercel.app/api/machines1/verify1/${id}`, {
+          method: "PUT",
+          headers: {
+            "Content-Type": "application/json",
+            Authorization: `Bearer ${token}`,
+          },
+          body: JSON.stringify({}), // Empty body since no data is needed
         })
-        .catch((err) => {
-          console.error('Verify machine error:', err);
-          utils.showToast(`Error verifying machine: ${err.message}`, 'error');
-        });
-    }
-    function hide() {
-    let obj = document.querySelector('#machines');
-    console.log('first');
-    obj.style.display = 'none'; // Hides the modal
-    }
+          .then((res) => {
+            if (!res.ok) {
+              return res.json().then((err) => {
+                throw new Error(err.error || "Failed to verify machine");
+              });
+            }
+            utils.showToast("Machine verified successfully", "success");
+            fetchMachines();
+          })
+          .catch((err) => {
+            console.error("Verify machine error:", err);
+            utils.showToast(`Error verifying machine: ${err.message}`, "error");
+          });
+      }
+      function hide() {
+        let obj = document.querySelector("#machines");
+        console.log("first");
+        obj.style.display = "none"; // Hides the modal
+      }
 
-    function viewImages(machineId, machineName) {
-      fetch(`https://machine-yard.vercel.app/api/machines/${machineId}`, {
-        headers: { Authorization: `Bearer ${token}` },
-      })
-        .then((res) => {
-          if (!res.ok) {
-            return res.json().then((err) => {
-              throw new Error(err.error || 'Failed to fetch machine details');
-            });
-          }
-          return res.json();
+      function viewImages(machineId, machineName) {
+        fetch(`https://machine-yard.vercel.app/api/machines/${machineId}`, {
+          headers: { Authorization: `Bearer ${token}` },
         })
-        .then((machine) => {
-          const modal = document.getElementById("imageModal");
-          const modalTitle = document.getElementById("modalTitle");
-          const modalImages = document.getElementById("modalImages");
+          .then((res) => {
+            if (!res.ok) {
+              return res.json().then((err) => {
+                throw new Error(err.error || "Failed to fetch machine details");
+              });
+            }
+            return res.json();
+          })
+          .then((machine) => {
+            const modal = document.getElementById("imageModal");
+            const modalTitle = document.getElementById("modalTitle");
+            const modalImages = document.getElementById("modalImages");
 
-          modalTitle.textContent = `Images for ${machineName}`;
-          modalImages.innerHTML = machine.images && machine.images.length > 0 ? machine.images.map((img) => `
+            modalTitle.textContent = `Images for ${machineName}`;
+            modalImages.innerHTML =
+              machine.images && machine.images.length > 0
+                ? machine.images
+                    .map(
+                      (img) => `
             <img src="${img}" alt="${machineName}" class="w-full h-auto rounded-md">
-          `).join("") : '<p class="text-gray-500 italic">No images available</p>';
+          `
+                    )
+                    .join("")
+                : '<p class="text-gray-500 italic">No images available</p>';
 
-          modal.classList.remove("hidden");
-        })
-        .catch((err) => {
-          console.error('View images error:', err);
-          utils.showToast(`Error loading images: ${err.message}`, 'error');
+            modal.classList.remove("hidden");
+          })
+          .catch((err) => {
+            console.error("View images error:", err);
+            utils.showToast(`Error loading images: ${err.message}`, "error");
+          });
+      }
+
+      function closeModal() {
+        document.getElementById("imageModal").classList.add("hidden");
+      }
+      async function setProfilePic() {
+        try {
+          const response = await fetch(
+            "https://machine-yard.vercel.app/api/auth/profile",
+            {
+              headers: { Authorization: `Bearer ${token}` },
+            }
+          );
+          if (!response.ok) {
+            const errorData = await response.json();
+            throw new Error(errorData.error || "Failed to fetch profile");
+          }
+          const user = await response.json();
+          const profilePicElement = document.getElementById(
+            "dashboard-profile-pic"
+          );
+          if (user.profilePic) {
+            profilePicElement.src = user.profilePic;
+          } else {
+            profilePicElement.src = "https://via.placeholder.com/150"; // Fallback image
+          }
+        } catch (err) {
+          console.error("Fetch profile error:", err);
+          utils.showToast(`Error fetching profile: ${err.message}`, "error");
+        }
+      }
+      function rejectMachine(id) {
+  if (!confirm("Are you sure you want to reject this machine?")) return;
+
+  fetch(`https://machine-yard.vercel.app/api/machines1/reject1/${id}`, {
+    method: "PUT",
+    headers: {
+      "Content-Type": "application/json",
+      Authorization: `Bearer ${token}`,
+    },
+    body: JSON.stringify({}) // No additional data needed
+  })
+    .then((res) => {
+      if (!res.ok) {
+        return res.json().then((err) => {
+          throw new Error(err.error || "Failed to reject machine");
         });
-    }
+      }
+      utils.showToast("Machine rejected successfully", "error");
+      fetchMachines(); // Refresh the list after rejection
+    })
+    .catch((err) => {
+      console.error("Reject machine error:", err);
+      utils.showToast(`Error rejecting machine: ${err.message}`, "error");
+    });
+}
 
-    function closeModal() {
-      document.getElementById("imageModal").classList.add("hidden");
-    }
-
-    if (token) {
-      fetchMachines();
-    }
-  </script>
-</body>
+      if (token) {
+        fetchMachines();
+        setProfilePic();
+      }
+    </script>
+  </body>
 </html>
