--- a/public/user-dashboard.html
+++ b/public/user-dashboard.html
@@ -84,16 +84,21 @@
     <div class="z-10 pointer-events-none overflow-hidden">
       <!-- Machine 1 (starts immediately) -->
       <div
-        class="absolute z-10 top-[82px] animate-[moveHorizon_35s_ease_infinite] opacity-40"
+        class="absolute z-10 top-[94px] animate-[moveHorizon_35s_ease_infinite] opacity-40"
       >
-        <img src="construction-2027213.svg" alt="" class="w-32" />
+        <img src="construction-2027213.svg" alt="" class="w-28" />
       </div>
     </div>
     <div class="container mx-auto px-6 py-12 z-50">
       <!-- Header -->
       <div class="text-center z-50 mb-[25px]">
-        <h1 class="text-5xl font-extrabold z-50 text-custom-dark mb-4">
-          Machine Yard
+        <h1 class="text-4xl relative font-extrabold z-50 text-custom-dark mb-4">
+          <span class="mr-5">Machine Yard | User</span>
+          <div class="w-14 h-14 rounded-full border-[2px] border-[#2a431c] absolute -top-[11px] right-[385px] hover:scale-105 transition-transform duration-200">
+            <a href="/user-profile.html">
+              <img id="dashboard-profile-pic" src="https://via.placeholder.com/150" alt="User Profile" class="w-full h-full object-cover rounded-full">
+            </a>
+          </div>
         </h1>
         <p class="text-xl text-custom-dark/70 max-w-2xl mx-auto">
           Discover, Book, and Manage Machines with Ease
@@ -536,9 +541,32 @@ async function fetchBookings() {
           });
       }
 
+      async function setProfilePic() {
+      try {
+        const response = await fetch("https://machine-yard.vercel.app/api/auth/profile", {
+          headers: { Authorization: `Bearer ${token}` },
+        });
+        if (!response.ok) {
+          const errorData = await response.json();
+          throw new Error(errorData.error || "Failed to fetch profile");
+        }
+        const user = await response.json();
+        const profilePicElement = document.getElementById("dashboard-profile-pic");
+        if (user.profilePic) {
+          profilePicElement.src = user.profilePic;
+        } else {
+          profilePicElement.src = "https://via.placeholder.com/150"; // Fallback image
+        }
+      } catch (err) {
+        console.error("Fetch profile error:", err);
+        utils.showToast(`Error fetching profile: ${err.message}`, "error");
+      }
+    }
+
       if (token) {
         fetchMachines();
         fetchBookings();
+        setProfilePic();
       }
 
 
